Bugfix - Delete icons were showing up on the left for Social and Vehicles covering the move icon preventing rearranging.

--- a/Shadowrun Sixth World/Shadowrun6thEdition.css
+++ b/Shadowrun Sixth World/Shadowrun6thEdition.css
@@ -959,9 +959,9 @@ div.matrix-device .matrixFirewall {
 
 
 .pc div.arms div.armor div.headers {
-  grid-template-columns: 30% 3.5em 2.5em 2.5em 2.5em 2.5em 2.5em 1em 1em !important; }
+  grid-template-columns: 9em 3.5em 2.5em 2.5em 2.5em 2.5em 2.5em .75em .75em !important; }
 .pc div.arms div.armor div.repitem {
-  grid-template-columns: 30% 3.5em 2.5em 2.5em 2.5em 2.5em 2.5em 1em 1em !important; }
+  grid-template-columns: 9em 3.5em 2.5em 2.5em 2.5em 2.5em 2.5em .75em .75em !important; }
 .pc div.arms div.armor div.repitem label[data-i18n-title='notes'],
 .pc div.arms div.armor div.repitem h3[data-i18n='notes'],
 .pc div.arms div.armor div.repitem div.collapse {
@@ -990,7 +990,7 @@ div.matrix-device .matrixFirewall {
   grid-area: 1 / 10 / 1 / 11 !important; }
 .pc div.arms div.armor div.repitem div.settings {
   grid-column: 1 / 11 !important;
-  grid-template-columns: 30% 3.5em 2.5em 2.5em 2.5em 2.5em 2.5em 1em 1em !important; }
+  grid-template-columns: 9em 3.5em 2.5em 2.5em 2.5em 2.5em 2.5em .75em .75em !important; }
 .pc div.arms div.armor div.repitem div.settings div.row {
   grid-column: 1 / 11 !important;
   margin-left: 0px !important; }
@@ -2507,6 +2507,9 @@ input.skill-select[type='checkbox'] {
     word-wrap: break-word !important;
   }
 
+  .lifestyle div.itemcontrol button.repcontrol_del {
+    right: -2px;
+    top: -3px; }
 
 
 
@@ -2551,6 +2554,9 @@ div.contacts div.repitem div.settings textarea {
 div.contacts div.repitem div.settings input[type='number'] {
   width: 2em; }
 
+div.contacts div.repitem div.itemcontrol button.repcontrol_del {
+  right: -2px;
+  top: -2px; }
 
 
 /***** MAGIC DISPLAY *****/
@@ -2741,6 +2747,10 @@ div.contacts div.repitem div.settings input[type='number'] {
 
 .vehicle-box label[data-i18n='seats'] {
   widht: 14%; }
+
+.vehicle-box div.itemcontrol button.repcontrol_del {
+  right: -2px;
+  top: -2px; }
 
 /***** VEHICLE SETTING *****/
 .vehicle-box .settings h3 {
